welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:24: error: reassignment to val
    c=c+1  
     ^